frame/support/test/tests/benchmark_ui/extra_extra.rs
use frame_benchmarking::v2::*;
#[allow(unused_imports)]
use frame_support_test::Config;

#[benchmarks]
mod benches {
	use super::*;

	#[benchmark(extra, extra)]
	fn bench() {
		#[block]
		{}
	}
}

fn main() {}
